--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,4 +1,13 @@
 FROM python:3.15.5
 LABEL authors="Kayky"
 
-ENTRYPOINT ["top", "-b"]
+WORKDIR /app
+
+COPY . .
+
+EXPOSE 5000
+
+RUN pip install uv && uv sync && python /backend/routes.py
+
+
+
