--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,4 +3,9 @@ name = "crm-project"
 version = "0.1.0"
 description = "Add your description here"
 requires-python = ">=3.13"
-dependencies = []
+dependencies = [
+    "argon2-cffi>=25.1.0",
+    "bcrypt>=4.3.0",
+    "flask>=3.1.1",
+    "psycopg2>=2.9.10",
+]
