--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,13 +1,16 @@
-FROM python:3.15.5
+FROM python:3.13.5
 LABEL authors="Kayky"
 
 WORKDIR /app
+
+COPY pyproject.toml .
+COPY uv.lock .
+
+RUN pip install uv && uv sync
 
 COPY . .
 
 EXPOSE 5000
 
-RUN pip install uv && uv sync && python /backend/routes.py
-
-
+CMD ["python", "routes.py"]
 
